feat: optimize the ChannelsFeedDownload function
